feat(device) detect new brand Wizz model: DV-PTB1080 feat(device) detect brand Fujitsu models: Arrows Tab F-04H, Arrows Phone F-03L, Easy Phone F-06F, Arrows EF FJL21 feat(device) detect brand NEC models: LAVIE Tab E TE510, LAVIE Tab E TE510, LAVIE Tab S TS507, LAVIE Tab E TE508

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5318,7 +5318,7 @@ FNB:
 
 # Fujitsu
 Fujitsu:
-  regex: '(?:F-01[FHJKL]|F-02[EFGHLK]|F-03[DEFGKH]|F-04[EGKJ]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-[45]1A|F-42A|F-11D|F-12C|M532|FARTM933KZ|901FJ|arrows(?:RX|M03|M0[45](?:-PREMIUM)?)|801FJ)(?:[);/ ]|$)'
+  regex: '(?:F-01[FHJKL]|F-02[EFGHLK]|F-03[DEFGKHL]|F-04[EGHKJ]|F-05[DEFJ]|F-06[EF]|F-07[DE]|F-08D|F-09[DE]|F-10D|F-[45]1A|F-42A|F-11D|F-12C|M532|FARTM933KZ|901FJ|arrows(?:RX|M03|M0[45](?:-PREMIUM)?)|801FJ|FJL21)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'F-51A(?:[);/ ]|$)'
@@ -5327,10 +5327,14 @@ Fujitsu:
       model: 'Arrows NX F-01F'
     - regex: 'F-01L(?:[);/ ]|$)'
       model: 'Easy Phone F-01L'
+    - regex: 'F-06F(?:[);/ ]|$)'
+      model: 'Easy Phone F-06F'
     - regex: 'F-03K(?:[);/ ]|$)'
       model: 'Easy Phone F-03K'
     - regex: 'F-42A(?:[);/ ]|$)'
       model: 'Easy Phone F-42A'
+    - regex: 'F-03L(?:[);/ ]|$)'
+      model: 'Arrows Phone F-03L'
     - regex: 'F-01J(?:[);/ ]|$)'
       model: 'Arrows NX F-01J'
     - regex: 'F-01K(?:[);/ ]|$)'
@@ -5341,6 +5345,8 @@ Fujitsu:
       model: 'Arrows X F-02E'
     - regex: 'F-02G(?:[);/ ]|$)'
       model: 'Arrows NX F-02G'
+    - regex: 'FJL21(?:[);/ ]|$)'
+      model: 'Arrows EF FJL21'
     - regex: 'F-02H(?:[);/ ]|$)'
       model: 'Arrows NX F-02H'
     - regex: 'F-03D(?:[);/ ]|$)'
@@ -5400,17 +5406,8 @@ Fujitsu:
     - regex: 'arrowsM(0[45])(?:[);/ ]|$)'
       model: 'Arrows M$1'
 
-    - regex: 'F-02F(?:[);/ ]|$)'
-      model: 'Arrows Tab F-02F'
-      device: 'tablet'
-    - regex: 'F-02K(?:[);/ ]|$)'
-      model: 'Arrows Tab F-02K'
-      device: 'tablet'
-    - regex: 'F-03G(?:[);/ ]|$)'
-      model: 'Arrows Tab F-03G'
-      device: 'tablet'
-    - regex: 'F-05E(?:[);/ ]|$)'
-      model: 'Arrows Tab F-05E'
+    - regex: '(F-0[32]F|F-03G|F-04H|F-05E)(?:[);/ ]|$)'
+      model: 'Arrows Tab $1'
       device: 'tablet'
     - regex: 'FARTM933KZ'
       model: 'Arrows Tab M504/HA4'
@@ -9873,7 +9870,7 @@ Nobby:
 
 # nec
 NEC:
-  regex: 'NEC[ _\-]|KGT/2\.0|PC-TE508HAW|portalmmm/1\.0 (?:DB|N)|(?:portalmmm|o2imode)/2.0[ ,]N|(?:N-06C|N-02E|LAVIE Tab E 10FHD1)(?:[);/ ]|$)'
+  regex: 'NEC[ _\-]|KGT/2\.0|PC-TE508HAW|PC-TE510(?:HAW|BAL)|PC-TS507N1S|PC-TE508S1|portalmmm/1\.0 (?:DB|N)|(?:portalmmm|o2imode)/2.0[ ,]N|(?:N-06C|N-02E|LAVIE Tab E 10FHD1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'N-06C(?:[);/ ]|$)'
@@ -9887,6 +9884,15 @@ NEC:
     - regex: '(?:portalmmm|o2imode)/2\.0[ ,](N[a-z0-9]+)'
       model: '$1'
     - regex: 'PC-TE508HAW(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'LAVIE Tab E TE508'
+    - regex: 'PC-TE510(?:BAL|HAW)(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'LAVIE Tab E TE510'
+    - regex: 'PC-TS507N1S(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'LAVIE Tab S TS507'
+    - regex: 'PC-TE508S1(?:[);/ ]|$)'
       device: 'tablet'
       model: 'LAVIE Tab E TE508'
     - regex: '(LAVIE Tab E 10FHD1)(?:[);/ ]|$)'
