feat(device) detect new brand Bluedot model: BNT-71 feat(device) detect new brand Planet Computers model: Cosmo Communicator feat(device) detect brand Hyundai model: L503F Plus feat(device) detect brand UMIDIGI model: Bison feat(device) detect brand Sharp model: Aquos ea (606SH), Aquos Phone SH-M01 feat(device) improvement detect brand Nvidia model: SHIELD Tablet K1
issue #6511

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6585,7 +6585,7 @@ Huawei:
 
 # Hyundai
 Hyundai:
-  regex: 'Hyundai|Ultra (?:Active|Air|Charm|Dream|Energy|Latitude|Link|Live|Shadow|Shine|Storm|Style|Sync|Trend|Vision|Wave)|G(24027|2552[34])K|W25042L|HP554O|Seoul S8'
+  regex: 'Hyundai|Ultra (?:Active|Air|Charm|Dream|Energy|Latitude|Link|Live|Shadow|Shine|Storm|Style|Sync|Trend|Vision|Wave)|G(24027|2552[34])K|W25042L|HP554O|Seoul S8|L503F Plus'
   device: 'smartphone'
   models:
     - regex: 'Ultra (Active|Air|Charm|Dream|Energy Lite|Energy Plus|Energy|Latitude|Link|Live II|Live|Shadow|Shine|Storm|Style|Sync|Trend|Vision|Wave)'
@@ -6602,6 +6602,8 @@ Hyundai:
       model: 'Eternity W42'
     - regex: 'HP554O'
       model: 'HP554O'
+    - regex: 'L503F Plus'
+      model: 'L503F Plus'
     - regex: 'Hyundai ([^;/]+) Build'
       model: '$1'
       device: 'tablet'
@@ -10153,12 +10155,12 @@ Nous:
 
 # Nvidia
 Nvidia:
-  regex: '(SHIELD Tablet K1) Build|SHIELD Android TV|Tegra(Note-P1640| Note 7)'
+  regex: 'SHIELD Tablet K1|SHIELD Android TV|Tegra(Note-P1640| Note 7)'
   device: 'tablet'
   models:
     - regex: 'TegraNote-P1640'
       model: 'Tegra Note P1640'
-    - regex: '(SHIELD Tablet K1|Tegra Note 7)(?: Build|\))'
+    - regex: '(SHIELD Tablet K1|Tegra Note 7)(?: Build|[;)])'
       model: '$1'
     - regex: 'SHIELD Android TV'
       model: 'SHIELD Android TV'
@@ -13122,7 +13124,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[12346]|S[357]-SH|SH-[MZ](10|01)|SH-[CL]02|SH-RM(?:1[12]|02)|[34]04SH|401SH|[45]02SH|306SH|[36]05SH|70[1246]SH|80[138]SH|90[1678]SH|50[3679]SH|SHL2[25]|SHV4[0-8]|SHV3[1-9](?:[-_]u)?|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHF3[34]|SHV4[035][-_]u|SW001SH|SHG0[12]|X4-SH|A002SH|SH-A01|DM-01J|SH-D01|SH-M06|A001SH)(?:[);/ ]|$)'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[1456789]|SH-M1[12346]|S[357]-SH|SH-[MZ](10|01)|SH-[CL]02|SH-RM(?:1[12]|02)|[34]04SH|401SH|[45]02SH|306SH|[36]05SH|70[1246]SH|80[138]SH|90[1678]SH|50[3679]SH|SHL2[25]|SHV4[0-8]|SHV3[1-9](?:[-_]u)?|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHF3[34]|SHV4[035][-_]u|SW001SH|SHG0[12]|X4-SH|A002SH|SH-A01|DM-01J|SH-D01|A001SH|606SH)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -13134,6 +13136,8 @@ Sharp:
       model: 'Aquos Xx2'
     - regex: '[34]04SH(?:[);/ ]|$)'
       model: 'Aquos Xx'
+    - regex: '606SH(?:[);/ ]|$)'
+      model: 'Aquos ea'
     - regex: '507SH(?:[);/ ]|$)'
       model: 'Android One'
     - regex: 'S3-SH(?:[);/ ]|$)'
@@ -13166,7 +13170,7 @@ Sharp:
       model: 'Aquos Phone Zeta'
     - regex: 'SH06D(?:[);/ ]|$)'
       model: 'Aquos Phone SH-06D'
-    - regex: '(SHL2[25])(?:[);/ ]|$)'
+    - regex: '(SHL2[25]|SH-M01)(?:[);/ ]|$)'
       model: 'Aquos Phone $1'
     - regex: 'SH-L02(?:[);/ ]|$)'
       model: 'Aquos L2'
@@ -14000,7 +14004,7 @@ Ulefone:
 
 # UMIDIGI
 UMIDIGI:
-  regex: 'UMI(?:DIGI)?[ _]|A5_Pro|ROME[_ ]X'
+  regex: 'UMI(?:DIGI)?[ _]|A5_Pro|ROME[_ ]X|BISON'
   device: 'smartphone'
   models:
     - regex: 'A5_Pro'
@@ -14011,6 +14015,8 @@ UMIDIGI:
       model: 'Touch'
     - regex: 'ROME[_ ]X'
       model: 'Rome X'
+    - regex: 'BISON'
+      model: 'Bison'
     - regex: 'UMI_(London|Diamond(?:_X)?)'
       model: '$1'
     - regex: 'UMI(?:DIGI)?[ _]([^/;)]+)(?: Build|\))'
@@ -18318,6 +18324,18 @@ Andowl:
 Silelis:
   regex: 'Silelis[ _](T-1)(?:[);/ ]|$)'
   device: 'tv'
+  model: '$1'
+
+# Bluedot
+Bluedot:
+  regex: '(BNT-71)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
+
+# Planet Computers
+Planet Computers:
+  regex: '(Cosmo_Communicator)(?:[);/ ]|$)'
+  device: 'tablet'
   model: '$1'
 
 # Hardkernel (www.hardkernel.com)
