feat(device) detect brand Allwinner model: Ultra Octa T8
issue #6510

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1656,13 +1656,16 @@ Allview:
 
 # Allwinner
 Allwinner:
-  regex: '(?:QUAD-CORE A64 p3|ZY-07B)(?:[);/ ]|$)'
+  regex: '(?:QUAD-CORE A64 p3|ZY-07B|UltraOcta-T8)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'QUAD-CORE A64 p3'
       model: 'A64 QUAD-CORE p3'
     - regex: 'ZY-07B'
       model: 'ZY-07B'
+    - regex: 'UltraOcta-T8'
+      device: 'car browser'
+      model: 'Ultra Octa T8'
 
 # altron
 altron:
