feat(os) detect platform ARM for aarch64
issue #6512

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1108,3 +1108,10 @@
     short_name: DEE
     version: "15.11"
     platform: x64
+-
+  user_agent: Mozilla/5.0 (X11; CrOS aarch64 13310.93.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.133 Safari/537.36
+  os:
+    name: Chrome OS
+    short_name: COS
+    version: 85.0.4183.133
+    platform: ARM
