Adds detection for Google Pixel 4a (5G)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5675,6 +5675,8 @@ Google:
       model: 'Pixel 3a'
     - regex: 'Pixel 4 XL'
       model: 'Pixel 4 XL'
+    - regex: 'Pixel 4a \(5G\)'
+      model: 'Pixel 4a (5G)'
     - regex: 'pixel 4a'
       model: 'Pixel 4a'
     - regex: 'G011A'
