fix(device) detect common model for brand Huawei
issue #6517

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6580,7 +6580,7 @@ Huawei:
       model: 'Ascend Mate $1'
     - regex: 'Huawei[ _\-]?([^/;]*) Build'
       model: '$1'
-    - regex: '(?:HW-)?Huawei(?:/1\.0/0?(?:Huawei))?[_\- /]?([a-z0-9\-_]+)'
+    - regex: '(?:HW-)?Huawei(?!Browser)(?:/1\.0/0?(?:Huawei))?[_\- /]?([a-z0-9\-_]+)'
       model: '$1'
     - regex: 'Huawei; ([a-z0-9 \-]+)'
       model: '$1'
