--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6523,6 +6523,9 @@ Huawei:
     - regex: 'KOB2-[LW]09(?:[);/ ]|$)'
       device: 'tablet'
       model: 'MediaPad T 8.0"'
+    - regex: 'AGR-L09(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'MediaPad T 10'
     - regex: 'AGS-(?:L0[39]|W09)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'MediaPad T3 10'
@@ -8109,17 +8112,29 @@ Lenovo:
     - regex: 'TB3-710[IF]'
       model: 'TAB3 7 Essential'
       device: 'tablet'
+    - regex: 'TB3-X70L'
+      model: 'TAB3 10 Plus'
+      device: 'tablet'
+    - regex: 'TB-8703X'
+      model: 'TAB3 8 Plus'
+      device: 'tablet'
     - regex: 'TAB 2 A8-50LC'
       model: 'TAB2 A8-50LC'
       device: 'tablet'
     - regex: '501LV(?:[);/ ]|$)'
       model: 'TAB2 8.0"'
       device: 'tablet'
+    - regex: 'TAB 2 A10-70L(?:[);/ ]|$)'
+      model: 'TAB2 A10'
+      device: 'tablet'
     - regex: '(?:TB3-850[FM]|601LV)(?:[);/ ]|$)'
       model: 'TAB3 8'
       device: 'tablet'
-    - regex: 'Lenovo TB-X304[FL]'
+    - regex: 'TB-X304[FL]'
       model: 'TAB4 10'
+      device: 'tablet'
+    - regex: 'TB-8504X'
+      model: 'TAB4 8'
       device: 'tablet'
     - regex: '(?:TB-X704[VL]|701LV)(?:[);/ ]|$)'
       model: 'TAB4 10 Plus'
@@ -8135,6 +8150,12 @@ Lenovo:
       device: 'tablet'
     - regex: 'TB-X605F(?:[);/ ]|$)'
       model: 'Tab M10'
+      device: 'tablet'
+    - regex: 'TB-7104I(?:[);/ ]|$)'
+      model: 'Tab E7'
+      device: 'tablet'
+    - regex: 'TB-X606F(?:[);/ ]|$)'
+      model: 'Tab M10 FHD Plus'
       device: 'tablet'
     - regex: 'Lenovo ?B8000(-[FH])?'
       model: 'Yoga Tablet 10'
