feat(device) detect brand Lenovo models: Tab M10 FHD Plus (TB-X606X), TAB 2 A7 (A7-30HC, A7-30GC),  TAB4 8 Plus (TB-8704X), Tab 7 Essential (TB-7304X), Tab 7 (TB-7504X) feat(device) detect brand Meizu model: 15 Lite
issue #6517

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8125,7 +8125,7 @@ Lenovo:
       model: 'TAB2 8.0"'
       device: 'tablet'
     - regex: 'TAB 2 A10-70L(?:[);/ ]|$)'
-      model: 'TAB2 A10'
+      model: 'TAB 2 A10'
       device: 'tablet'
     - regex: '(?:TB3-850[FM]|601LV)(?:[);/ ]|$)'
       model: 'TAB3 8'
@@ -8135,6 +8135,9 @@ Lenovo:
       device: 'tablet'
     - regex: 'TB-8504X'
       model: 'TAB4 8'
+      device: 'tablet'
+    - regex: 'TB-8704X'
+      model: 'TAB4 8 Plus'
       device: 'tablet'
     - regex: '(?:TB-X704[VL]|701LV)(?:[);/ ]|$)'
       model: 'TAB4 10 Plus'
@@ -8154,7 +8157,13 @@ Lenovo:
     - regex: 'TB-7104I(?:[);/ ]|$)'
       model: 'Tab E7'
       device: 'tablet'
-    - regex: 'TB-X606F(?:[);/ ]|$)'
+    - regex: 'TB-7304X(?:[);/ ]|$)'
+      model: 'Tab 7 Essential'
+      device: 'tablet'
+    - regex: 'TB-7504X(?:[);/ ]|$)'
+      model: 'Tab 7'
+      device: 'tablet'
+    - regex: 'TB-X606[FX](?:[);/ ]|$)'
       model: 'Tab M10 FHD Plus'
       device: 'tablet'
     - regex: 'Lenovo ?B8000(-[FH])?'
@@ -8202,6 +8211,9 @@ Lenovo:
       device: 'tablet'
     - regex: 'Lenovo ?A3300-(?:GV|H)'
       model: 'TAB 2 A7-30'
+      device: 'tablet'
+    - regex: 'TAB 2 A7-30[HG]C'
+      model: 'TAB 2 A7'
       device: 'tablet'
     - regex: 'TB-8504F'
       model: 'TAB 4 8'
@@ -9144,7 +9156,7 @@ MEEG:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H|MZ-15 (?:Lite|Plus)|MZ-16 X)(?:[);/ ]|$)'
+  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H| 15 Lite|MZ-15 (?:Lite|Plus)|MZ-16 X)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -9212,7 +9224,7 @@ Meizu:
       model: '16th Plus'
     - regex: 'MZ-15 Plus(?:[);/ ]|$)'
       model: '15 Plus'
-    - regex: 'MZ-15 Lite(?:[);/ ]|$)'
+    - regex: '(?:MZ-15 Lite| 15 Lite)(?:[);/ ]|$)'
       model: '15 Lite'
     - regex: 'MZ-16th(?:[);/ ]|$)'
       model: '16th'
