feat(device) detect new brand BOE model: HV320WHB-N55 feat(device) detect brand Rombica model: Smart Box v009
issue #6517

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11283,12 +11283,12 @@ Rokit:
 
 # Rombica
 Rombica:
-  regex: '(Rombica|SSQ-A0500)(?:[);/ ]|$)'
+  regex: '(Rombica|SSQ-A0500|Smart Box v[0-9]+)(?:[);/ ]|$)'
   device: 'tv'
   models:
     - regex: 'SSQ-A0500(?:[);/ ]|$)'
       model: 'Smart Stick 4K'
-    - regex: '(Infinity K8|Smart Box (?:v00[34578]|Quad|Ultra HD v002|4K V001))(?:[);/ ]|$)'
+    - regex: '(Infinity K8|Smart Box (?:v00[345789]|Quad|Ultra HD v002|4K V001))(?:[);/ ]|$)'
       model: '$1'
 
 # Rover
@@ -18346,6 +18346,12 @@ Andowl:
 # Silelis (silelis.com)
 Silelis:
   regex: 'Silelis[ _](T-1)(?:[);/ ]|$)'
+  device: 'tv'
+  model: '$1'
+
+# BOE (www.boe.com)
+BOE:
+  regex: 'Leff Shell (HV320WHB-N55)(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
 
