feat(device) rename new brand BOE to Leff model: HV320WHB-N55
issue #6517

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18349,8 +18349,8 @@ Silelis:
   device: 'tv'
   model: '$1'
 
-# BOE (www.boe.com)
-BOE:
+# Leff
+Leff:
   regex: 'Leff Shell (HV320WHB-N55)(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
