feat(device) detect brand Lenovo model: TAB 2 A7 (A7-30DC) feat(device) detect brand Chuwi model: Hi9 Air feat(device) rename model Lenovo Tab 4 10 Plus => Lenovo TAB4 10 Plus
issue #6517

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8145,7 +8145,7 @@ Lenovo:
     - regex: 'TB-8704X'
       model: 'TAB4 8 Plus'
       device: 'tablet'
-    - regex: '(?:TB-X704[VL]|701LV)(?:[);/ ]|$)'
+    - regex: '(?:TB-X704[FVL]|701LV)(?:[);/ ]|$)'
       model: 'TAB4 10 Plus'
       device: 'tablet'
     - regex: '801LV(?:[);/ ]|$)'
@@ -8212,7 +8212,7 @@ Lenovo:
     - regex: 'Lenovo ?A3300-(?:GV|H)'
       model: 'TAB 2 A7-30'
       device: 'tablet'
-    - regex: 'TAB 2 A7-30[HG]C'
+    - regex: 'TAB 2 A7-30[HGD]C'
       model: 'TAB 2 A7'
       device: 'tablet'
     - regex: 'TB-8504F'
@@ -8235,9 +8235,6 @@ Lenovo:
       device: 'tablet'
     - regex: 'Yoga Tablet([^;/]+) Build'
       model: 'Yoga Tablet$1'
-      device: 'tablet'
-    - regex: 'TB-X704F'
-      model: 'Tab 4 10 Plus'
       device: 'tablet'
     - regex: 'TB-8505F'
       model: 'Tab M8'
@@ -16640,7 +16637,7 @@ Unihertz:
 
 # Chuwi
 Chuwi:
-  regex: '(?:CW-(Hi8-super|Hi12|V99|V17HD3G|VX8-3G|V88-QUAD|V9-DUAL|V88S|Vi[78]|[HV]i10 (?:pro|plus))|Hi10 (?:Pro|plus)|HiPad X|HiBox-hero|HiBook pro|Hi8 (?:Air|Pro))(?:[);/ ]|$)'
+  regex: '(?:CW-(Hi8-super|Hi12|V99|V17HD3G|VX8-3G|V88-QUAD|V9-DUAL|V88S|Vi[78]|[HV]i10 (?:pro|plus))|Hi10 (?:Pro|plus)|HiPad X|HiBox-hero|HiBook pro|Hi[89] ?(?:Air|Pro))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: '(CW-Hi8-super)(?:[);/ ]|$)'
@@ -16659,8 +16656,8 @@ Chuwi:
       model: 'HiBook Pro'
     - regex: 'HiPad X(?:[);/ ]|$)'
       model: 'HiPad X'
-    - regex: 'Hi8 Air(?:[);/ ]|$)'
-      model: 'Hi8 Air'
+    - regex: 'Hi([89]) ?Air(?:[);/ ]|$)'
+      model: 'Hi$1 Air'
     - regex: 'Hi8 pro(?:[);/ ]|$)'
       model: 'Hi8 Pro'
 
