--- a/Tests/fixtures/smartphone-19.yml
+++ b/Tests/fixtures/smartphone-19.yml
@@ -917,3 +917,39 @@
     model: Tab M8
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; arm_64; Android 8.0.0; Hi9Air) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.198 YaBrowser/20.11.0.180.01 Safari/537.36
+  os:
+    name: Android
+    version: 8.0.0
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 20.11.0.180.01
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Chuwi
+    model: Hi9 Air
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.0.1; Lenovo TAB 2 A7-30DC) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/537.36
+  os:
+    name: Android
+    version: 5.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 81.0.4044.138
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Lenovo
+    model: TAB 2 A7
+  os_family: Android
+  browser_family: Chrome
