--- a/Tests/fixtures/tablet-2.yml
+++ b/Tests/fixtures/tablet-2.yml
@@ -7115,7 +7115,7 @@
   device:
     type: tablet
     brand: Lenovo
-    model: Tab 4 10 Plus
+    model: TAB4 10 Plus
   os_family: Android
   browser_family: Chrome
 - 
