feat(device) detect new brand Reach models: Allure Ultra Curve, Allure Ultra, Allure Secure, Allure Admire, Allure Rise

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18349,6 +18349,12 @@ Planet Computers:
   device: 'tablet'
   model: '$1'
 
+# Reach
+Reach:
+  regex: '(Allure[_ ](?:Ultra(?:[_]Curve)?|Secure|Admire|Rise))(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
 # Hardkernel (www.hardkernel.com)
 Hardkernel:
   regex: 'ODROID[-]?(C2|U2|XU[34])(?:[);/ ]|$)'
