feat(device) detect new brand Tanix model: TX5 Max feat(device) detect brand Lenovo model: Yoga Tab 3 Plus (YT-X703L) feat(device) detect brand Vivax model: Fly V1
issue #6517

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3685,7 +3685,7 @@ Condor:
 
 # Coolpad
 Coolpad:
-  regex: '(?:YL-)?Coolpad|(?:Cool_9S|8190Q|1831-A0|8676-[AM]01|CP8298_I00|CP3648A|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C105-E0|C106-[79]|MTS-T0|cp3705A[S]?|ORL-C0|DLS-E0|8298-M02|5560S)(?:[);/ ]|$)|(8295|5860S) Build'
+  regex: '(?:YL-)?Coolpad|(?:Cool_9S|8190Q|1831-A0|8676-[AM]01|CP8298_I00|CP3648A|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C105-E0|C106-[79]| C106|MTS-T0|cp3705A[S]?|ORL-C0|DLS-E0|8298-M02|5560S)(?:[);/ ]|$)|(8295|5860S) Build'
   device: 'smartphone'
   models:
     - regex: 'VCR-[AI]0'
@@ -8195,6 +8195,9 @@ Lenovo:
       device: 'tablet'
     - regex: 'YT3-850M'
       model: 'Yoga Tab 3 10'
+      device: 'tablet'
+    - regex: 'YT-X703L'
+      model: 'Yoga Tab 3 Plus'
       device: 'tablet'
 
     - regex: 'S6000(?:[);/ ]|$)'
@@ -12728,6 +12731,12 @@ Thomson:
       device: 'smartphone'
       model: 'Every$1'
 
+# Tanix
+Tanix:
+  regex: 'TX5 MAX(?:[);/ ]|$)'
+  device: 'tv'
+  model: 'TX5 Max'
+
 # pantech
 Pantech:
   regex: 'Pantech|P[GN]-|PT-[a-z0-9]{3,}|TX[T]?[0-9]+|IM-[a-z0-9]+(?:[);/ ]|$)|ADR910L'
@@ -15331,6 +15340,8 @@ Vivax:
       model: 'Fun S500'
     - regex: 'VIVAX[ _]Fly3(?:[);/ ]|$)'
       model: 'Fly 3'
+    - regex: 'VIVAX[ _]Fly[ _]V1(?:[);/ ]|$)'
+      model: 'Fly V1'
     - regex: 'VIVAX (Point X551)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'SMART Point X5010(?:[);/ ]|$)'
